--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -234,24 +234,32 @@ const codeIndex = new Map();
 // =======================================================
 // 🔐 LOGIN
 // =======================================================
-async function loginUsuario(){
-  const u=$("#loginUsuario").value.trim(), p=$("#loginPassword").value.trim();
-  const msg=$("#loginMsg"); msg.textContent="Verificando...";
-  try{
-    const ref=collection(db,"usuarios_ruta");
-    const q=query(ref,where("usuario","==",u),where("password","==",p),where("activo","==",true));
-    const snap=await getDocs(q);
-    if(snap.empty){ msg.textContent="Usuario o contraseña incorrectos"; return;}
-    const data=snap.docs[0].data();
-    USUARIO_LOGUEADO={id:snap.docs[0].id,...data};
+async function loginUsuario() {
+  const u = document.querySelector("#loginUsuario").value.trim();
+  const p = document.querySelector("#loginPassword").value.trim();
+  const msg = document.querySelector("#loginMsg");
+  msg.textContent = "Verificando...";
+  try {
+    const ref = collection(db, "usuarios_ruta");
+    const q = query(ref, where("usuario", "==", u), where("password", "==", p), where("activo", "==", true));
+    const snap = await getDocs(q);
+    if (snap.empty) {
+      msg.textContent = "Usuario o contraseña incorrectos";
+      return;
+    }
+    const data = snap.docs[0].data();
+    USUARIO_LOGUEADO = { id: snap.docs[0].id, ...data };
     rutaId = data.rutaId;
-    $("#loginScreen").style.display="none";
-    $("#posApp").style.display="block";
+
+    document.querySelector("#loginScreen").style.display = "none";
+    document.querySelector("#posApp").style.display = "block";
 
     try {
       mostrarToast("Activando geolocalización 📡");
       window.UBICACION_ACTUAL = await obtenerUbicacionRobusta();
-    } catch(e) { console.warn("⚠️ GPS:", e.message); }
+    } catch (e) {
+      console.warn("⚠️ GPS:", e.message);
+    }
 
     await cargarCatalogoDesdeFirestore();
     await cargarDepartamentos();
@@ -260,7 +268,10 @@ async function loginUsuario(){
     await fijarClientePublico();
 
     localStorage.setItem("usuario_ruta", JSON.stringify(USUARIO_LOGUEADO));
-  }catch(e){ msg.textContent="Error de conexión"; console.error(e);}
+  } catch (e) {
+    msg.textContent = "Error de conexión";
+    console.error(e);
+  }
 }
 document.getElementById("btnLogin").onclick = loginUsuario;
 
@@ -440,7 +451,7 @@ async function confirmarCobro() {
       atendio: USUARIO_LOGUEADO?.nombre || "",
       fecha: serverTimestamp(),
       fecha_txt: fechaTxt,
-      cliente: elCliente.value || "Mostrador",
+      cliente: document.getElementById("cliente").value || "Mostrador",
       metodo_pago: metodoPago.value,
       recibido, cambio, notas,
       cortado: false,
@@ -573,6 +584,43 @@ function mostrarToast(mensaje){
   setTimeout(()=>toast.style.opacity="0",2500);
   setTimeout(()=>toast.remove(),3000);
 }
+// =======================================================
+// ⚙️ PLACEHOLDERS TEMPORALES
+// =======================================================
+async function render() {
+  const tbody = document.getElementById("tbody");
+  tbody.innerHTML = carrito.map(it => `
+    <tr>
+      <td>${it.nombre}</td>
+      <td style="text-align:center">${it.cantidad.toFixed(2)}</td>
+      <td style="text-align:right">${money(it.importe)}</td>
+      <td class="del-col"><button class="del" onclick="delItem('${it.id}')">×</button></td>
+    </tr>
+  `).join('');
+
+  const { subtotal, impuestos, total } = calcularTotalesConImpuestosIncluidos();
+  document.getElementById("lblSubtotal").textContent = money(subtotal);
+  document.getElementById("lblImpuestos").textContent = money(impuestos);
+  document.getElementById("lblTotal").textContent = money(total);
+}
+async function sincronizarVentasPendientes() {
+  console.log("Sincronizando ventas pendientes...");
+}
+
+async function fijarClientePublico() {
+  console.log("Cliente público fijado");
+}
+
+async function getNextFolio() {
+  const n = localStorage.getItem("ultimoFolio") || 0;
+  const nuevo = Number(n) + 1;
+  localStorage.setItem("ultimoFolio", nuevo);
+  return nuevo;
+}
+
+function cerrarCobro() {
+  document.getElementById("modalCobro").style.display = "none";
+}
 
 // =======================================================
 // 🖨️ Modal de Cobro (con descuento)
@@ -642,6 +690,14 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   }
 });
+  // =======================================================
+// 🎯 BOTÓN COBRAR – abre modal
+// =======================================================
+document.getElementById("btnCobrar").addEventListener("click", ()=>{
+  document.getElementById("modalCobro").style.display = "flex";
+  actualizarTotalesCobro();
+});
+
 </script>
 </body>
 </html>
