--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -55,7 +55,7 @@
     .search-results{
       position:absolute; left:90px; right:10px; top:calc(100% + 6px);
       background:#fff; border-radius:12px; box-shadow:var(--shadow);
-      max-height:260px; overflow:auto; display:none; z-index:310;
+      max-height:260px; overflow:auto; display:none; z-index:9999; /* 🔺 CAMBIAR AQUÍ */
     }
     .result-item{ padding:10px 12px; cursor:pointer; display:flex; justify-content:space-between; gap:8px; }
     .result-item small{ color:var(--muted); }
