--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -403,6 +403,7 @@ function calcularTotalesConImpuestosIncluidos() {
     total:+total.toFixed(2)
   };
 }
+  window.calcularTotalesConImpuestosIncluidos = calcularTotalesConImpuestosIncluidos;
 
 // =======================================================
 // 💸 DESCUENTO GLOBAL – cálculo dinámico
