--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -696,11 +696,12 @@ document.addEventListener("DOMContentLoaded", () => {
 // 🎯 BOTÓN COBRAR – abre modal
 // =======================================================
 document.getElementById("btnCobrar").addEventListener("click", ()=>{
-  const { total } = calcularTotalesConImpuestosIncluidos();
-  document.getElementById("cobroTotal").textContent = money(total); // ✅ mostrar total actual
-  document.getElementById("modalCobro").style.display = "flex";
-  actualizarTotalesCobro(); // recalcula si hay descuento
-});
+  const { subtotal, impuestos, total } = window.calcularTotalesConImpuestosIncluidos();
+  document.getElementById("cobroTotal").textContent = money(total);
+  document.getElementById("lblSubtotal").textContent = money(subtotal);
+  document.getElementById("lblImpuestos").textContent = money(impuestos);
+  document.getElementById("lblTotal").textContent = money(total);
+
 
 // =======================================================
 // 🔍 BUSCAR PRODUCTO Y AGREGAR AL CARRITO
