--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -51,7 +51,7 @@
       background:#fff; outline:none;
     }
 
-    .searchbox{ position:relative; z-index:300; }
+    .searchbox{ position:relative; z-index:auto; }
    .search-results{
   position:absolute;
   left:90px;
