--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -633,6 +633,8 @@ async function getNextFolio() {
 function cerrarCobro() {
   document.getElementById("modalCobro").style.display = "none";
 }
+window.confirmarCobro = confirmarCobro;
+window.cerrarCobro = cerrarCobro;
 
 // =======================================================
 // 🖨️ Modal de Cobro (con descuento)
